--- a/Home.html
+++ b/Home.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Home.css">
 </head>
 <body>
-    
+    <header>
+        <a href="#" class="logo">Known Space</a>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="Shooting Star.html">Shooting Star</a></li>
+            <li><a href="Meteor Mining.html">Meteor Mining</a></li>
+        </ul>
+    </header>
 </body>
 </html>
