--- a/Shooting Star.html
+++ b/Shooting Star.html
@@ -11,7 +11,7 @@
     <header>
         <a href="#" class="logo">Known Space</a>
         <ul>
-            <li><a href="Main.html">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="Shooting Star.html">Shooting Star</a></li>
             <li><a href="Meteor Mining.html">Meteor Mining</a></li>
         </ul>
