--- a/Home.html
+++ b/Home.html
@@ -16,5 +16,20 @@
             <li><a href="Meteor Mining.html">Meteor Mining</a></li>
         </ul>
     </header>
+    <div class="comet">
+        <img src="Comet.jpg" height="300px" width="500px" style="border-radius:50px">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, nulla eius soluta voluptatibus quaerat ipsa mollitia earum sapiente exercitationem facere placeat velit, molestiae odio repellat iste illo optio vitae nihil.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita velit magnam voluptatum cupiditate dolor doloremque sequi eius quae dolores accusamus odit cum, iusto soluta. Blanditiis tenetur nulla exercitationem amet delectus?</p>
+    </div>
+    <div class="earth">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi error quae ipsa iste placeat neque temporibus provident, tempore quos quas ullam quisquam possimus officia rem esse excepturi, numquam hic sint.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia minus nulla, iure illum eligendi reiciendis consectetur, recusandae ducimus asperiores exercitationem, temporibus dicta in consequuntur accusamus neque culpa est deserunt odit.</p>
+        <img src="Earth.jpg" height="400px" width="400px" style=" float:right; border-radius:50px">
+    </div>
+    <div class="moon">
+        <img src="Moon.jpg" height="400px" width="500px" style="border-radius:50px">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique perspiciatis illum perferendis explicabo voluptate tenetur voluptatum. Cupiditate aperiam unde beatae neque, illo doloribus, fuga incidunt dolores autem voluptatum architecto eaque?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, ullam. Corrupti impedit, voluptates odit illum dolor necessitatibus fugiat! Quia odio nemo repudiandae vitae adipisci consequuntur minus doloremque quidem reiciendis perspiciatis?</p>
+    </div>
 </body>
-</html>
+</html> 
