--- a/Shooting Star.html
+++ b/Shooting Star.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Known Space</a>
+        <a href="Home.html" class="logo">Known Space</a>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="Shooting Star.html">Shooting Star</a></li>
+            <li><a href="#">Shooting Star</a></li>
             <li><a href="Meteor Mining.html">Meteor Mining</a></li>
         </ul>
     </header>
