--- a/Meteor Mining.html
+++ b/Meteor Mining.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Known Space</a>
+        <a href="Home.html" class="logo">Known Space</a>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Shooting Star.html">Shooting Star</a></li>
-            <li><a href="Meteor Mining.html">Meteor Mining</a></li>
+            <li><a href="#">Meteor Mining</a></li>
         </ul>
     </header>
     <div class="wrapper">
